--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 	<ol>
 		<li><p>Ping</p>
-			<img <src="1.png" alt="ping"/>
+			<img src="1.png" alt="ping"/>
 		</li>
 		<li><p>Nslookup</p>
-			<img <src="2.png" alt="nslookup"/>
+			<img src="2.png" alt="nslookup"/>
 		</li>
 		<li><p>Whois</p>
-			<img <src="3.png" alt="whois"/>
+			<img src="3.png" alt="whois"/>
 		</li>
 		
 	</ol>
