--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
 
 <body>
 	<ol>
-		<li><p>Ping</p>
+		<li>	
+			<p>Подключение к учебному серверу по SSH</p>
+			<img src="0.png" alt="login"/>
+		</li>
+		<li>
+			<p>Проверка IP-адреса веб-сервера kubsu.ru с помощью команды ping</p>
 			<img src="1.png" alt="ping"/>
 		</li>
-		<li><p>Nslookup</p>
+		<li>
+			<p>Провекра A-записи с помощью команды nslookup -type=a </p>
+			<p>Провекра MX-записи с помощью команды nslookup -type=mx </p>
 			<img src="2.png" alt="nslookup"/>
 		</li>
-		<li><p>Whois</p>
+		<li>	
+			<p>Проверка даты регистрации доменов с помощью команды whois</p>
 			<img src="3.png" alt="whois"/>
+		</li>
+		<li>	
+			<p>Переход в каталог /var/www/html/u47633/ с помощью команды cd</p>
+			<p>Клонирование репозтория в этот каталог с помощью команды git clone</p>
+			<p>Проверка списока файлов и каталогов с помощьюкоманды ls</p>
+			<img src="4.png" alt="git clone"/>
 		</li>
 		
 	</ol>
