--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 			<p>Проверка списока файлов и каталогов с помощьюкоманды ls</p>
 			<img src="4.png" alt="git clone"/>
 		</li>
+		<li>	
+			<p>Переход в каталог /var/www/html/u47633/ с помощью команды cd</p>
+			<p>Клонирование репозтория в этот каталог с помощью команды git clone</p>
+			<p>Проверка списока файлов и каталогов с помощьюкоманды ls</p>
+			<img src="5.png" alt="filezilla"/>
+		</li>
 		
 	</ol>
 </body>
