--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 			<img src="4.png" alt="git clone"/>
 		</li>
 		<li>	
-			<p>Переход в каталог /var/www/html/u47633/ с помощью команды cd</p>
-			<p>Клонирование репозтория в этот каталог с помощью команды git clone</p>
-			<p>Проверка списока файлов и каталогов с помощьюкоманды ls</p>
-			<img src="5.png" alt="filezilla"/>
+			<p>Подклбчение к учебному серверу: ввод IP адреса сервера, логина, пароля</p>
+			<p>Указание пути к файлам сайта в окне: удаленный сайт</p>
+			<p>Скачивание файлов</p>
+			<img style="width:50%" src="5.png" alt="filezilla"/>
 		</li>
 		
 	</ol>
