--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<ol>
 		<li>	
 			<p>Подключение к учебному серверу по SSH</p>
+			<img src="-1.png" alt="login"/>
 			<img src="0.png" alt="login"/>
 		</li>
 		<li>
