--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 			<img src="0.png" alt="login"/>
 		</li>
 		<li>
-			<p>Проверка IP-адреса веб-сервера kubsu.ru с помощью команды ping</p>
+			<p>Проверка качества соединения веб-сервера kubsu.ru с помощью команды ping</p>
+			<p>Ping - это отклик, время ответа сервера на запрос kubsu.ru </p>
 			<img src="1.png" alt="ping"/>
 		</li>
 		<li>
 			<p>Провекра A-записи с помощью команды nslookup -type=a </p>
+			<p>А-запись указывает адрес, куда должен ссылаться Ваш домен</p>
 			<p>Провекра MX-записи с помощью команды nslookup -type=mx </p>
+			<p>DNS-запись предназначена для маршрутизации электронной почты</p>
+			<p>Информация о домене, указывающая на сервер, который обрабатывает вашу почту</p>
 			<img src="2.png" alt="nslookup"/>
 		</li>
 		<li>	
