--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</li>
 		<li>
 			<p>Провекра A-записи с помощью команды nslookup -type=a </p>
-			<p>А-запись указывает адрес, куда должен ссылаться Ваш домен</p>
+			<p>А-запись указывает адрес, куда должен ссылаться домен</p>
 			<p>Провекра MX-записи с помощью команды nslookup -type=mx </p>
 			<p>DNS-запись предназначена для маршрутизации электронной почты</p>
 			<p>Информация о домене, указывающая на сервер, который обрабатывает вашу почту</p>
